# Trajectories_IGRF_T04_C

./: .dockerignore  .gitignore  Dockerfile  README.md  build-image.sh  build.sh  docker-entrypoint.sh
docs/: testing.md
src/: CMakeLists.txt  birk_tot.c  birk_tot.h  btot.c  btot.h  deformed.c  deformed.h  full_rc.c  full_rc.h  main.c  positions.c  positions.h  recalc.c  recalc.h  test.c  test.h  utility.c  utility.h
src/coefs/: igrf_coefs_10.h  igrf_coefs_11.h  igrf_coefs_12.h  igrf_coefs_13.h  igrf_coefs_9.h
